styles/_nxt.scss
#nxtNavigation {
  flex-flow: nowrap;
  & > * {
    display: block;
    flex-grow: 1;
    width: calc((100% + (28px * 5)) / 5);
    margin-top: -1px;

    margin-left: -28px;
    // FIRST CARD
    &:nth-child(1) {
      z-index: 1;
      margin-left: 0px;
    }
    &:nth-child(2) {
      z-index: 2;
    }
    // FIRST CARD
    &:nth-child(3) {
      z-index: 3;
    }
    // FIRST CARD
    &:nth-child(4) {
      z-index: 4;
    }
    // FIRST CARD
    &:nth-child(5) {
      z-index: 4;
    }
  }
}

.collaborators-border {
  & > * {
    border-right: 1px solid white;
    border-bottom: 1px solid white;

    &:nth-last-child(2) {
      border-bottom: 0px;
    }
    &:nth-last-child(1) {
      border-bottom: 0px;
    }
    @media (min-width: 1536px) {
      &:nth-child(4n) {
        border-right: 0px;
      }

      &:nth-last-child(4) {
        border-bottom: 0px;
      }

      &:nth-last-child(3) {
        border-bottom: 0px;
      }
    }

    @media (max-width: 1535px) and (min-width: 850px) {
      &:nth-child(3n) {
        border-right: 0px;
      }
      &:nth-last-child(3) {
        border-bottom: 0px;
      }
    }

    @media (max-width: 849px) {
      &:nth-child(2n) {
        border-right: 0px;
      }
      &:nth-last-child(2) {
        border-bottom: 0px;
      }
    }

    @media (max-width: 599px) {
      border-right: 0px;
      border-bottom: 0px;
      &:last-nth-child(3) {
        border-bottom: 0px;
      }
    }
  }
}

.facilities-border {
  & > * {
    border-right: 1px solid white;

    @media (min-width: 850px) {
      &:nth-child(3n) {
        border-right: 0px;
      }
    }

    @media (max-width: 849px) {
      &:nth-child(2n) {
        border-right: 0px;
      }
    }
  }
}

.menu-icon {
  width: 12px;
  height: 12px;
  position: relative;
  & > div {
    position: absolute;
    width: 12px;
    height: 1px;
    left: 50%;
    top: 50%;
    // transition: margin-top 0.05s ease 0.125s, transform 0.15s ease 0s;
    transform-origin: 50% 50%;
    &:first-child {
      transform: translate(-50%, -50%);
      margin-top: 3px;
    }
    &:last-child {
      transform: translate(-50%, -50%);
      margin-top: -3px;
    }
  }

  &.open {
    & > div {
      // transition: margin-top 0s ease, transform 0s ease 0s;
      &:first-child {
        margin-top: 0px;
        transform: translate(-50%, -50%) rotate(-45deg);
      }
      &:last-child {
        margin-top: 0px;
        transform: translate(-50%, -50%) rotate(45deg);
      }
    }
  }

  &.white {
    & > div {
      background: white;
    }
  }
  &.black {
    & > div {
      background: black;
    }
  }
}

#testlist {
  & > * {
    &:nth-child(3n + 1):nth-last-child(-n + 2),
    &:nth-child(3n + 2):nth-last-child(-n + 2) {
      /* Styles for the last column */
      background-color: red;
    }
  }
}

.nxt-mobile-menu {
  opacity: 0;
  pointer-events: none;
  max-height: 70px;

  transition: opacity 0.2s 0.1s, max-height 0.2s;

  &.open {
    opacity: 1;
    pointer-events: auto;
    max-height: 700px;
    transition: opacity 0.4s 0s ease, max-height 0.6s 0.2s ease;
  }
}

